# opensymphony

./: .gitignore  README.md  SPEC.md  WORKFLOW.md  biome.json  connecting-acp-agents.md  next.config.ts  package.json  plan.md  playwright.config.ts  run-hermes.sh  tailwind.config.ts  tailwind.preset.ts  tsconfig.base.json  tsconfig.json  turbo.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/mock-acp-agent/: Cargo.toml
src-tauri/mock-acp-agent/src/: lib.rs  main.rs
src-tauri/resources/: reference-workflow.yaml
src-tauri/src/: lib.rs  types.rs
src-tauri/src/acp/: adapter.rs  client.rs  context.rs  dispatch.rs  mod.rs  noop_adapter.rs  pause.rs  permissions.rs  protocol.rs  recorder.rs  renderers.rs  session_events.rs  state.rs  types.rs
src-tauri/src/commands/: agent.rs  analytics.rs  app_state.rs  board.rs  control.rs  fixtures.rs  get_project_board.rs  get_runtime_state.rs  issue.rs  mod.rs  permissions.rs  platform.rs  project.rs  runtime.rs  settings.rs  state.rs  task.rs
src-tauri/src/db/: error.rs  fixtures.rs  migrate.rs  mod.rs  test_helpers.rs  workflow.rs
src-tauri/src/orchestrator/: audit.rs  events.rs  manager.rs  mod.rs  pause.rs  pause_gate.rs  poll.rs  project_manager.rs  project_runtime.rs  recovery.rs  runtime.rs  runtime_events.rs  types.rs  workspace.rs
src-tauri/src/runtime/: mod.rs  pause_gate.rs
src-tauri/src/stubs/: board.rs  constants.rs  control.rs  issue.rs  mod.rs  permissions.rs  settings.rs  state.rs
src-tauri/src/types/: agent.rs  analytics.rs  audit.rs  board.rs  issue.rs  (+11 more)
(+413 files in other folders)
