[workspace]
members = [".", "mock-acp-agent"]
resolver = "2"

[package]
name = "app"
version = "0.1.0"
description = "Agent orchestation runtime manager"
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["compat"] }
